2019-1/230/users/4041/executions/1788_3139.log
== TEST (2019-05-29 16:28:51) 
-- CODE:
from numpy import*
v = array(inport("insira o v: "))
i = 0
m = 0
x = float(v)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:29:14) 
-- CODE:
from numpy import*
v = array(input("insira o v: "))
i = 0
m = 0
x = float(v)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:30:07) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0
x = float(v)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:30:33) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0
x = float(v-1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:31:37) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0
x = float(v[i:])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:38:44) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0

while(i<size(v)):
	m = m +(((v[i])**(1/3))/v[i])**3
	i = i + 1
	
a = sum(m)
print(round(a,2))



-- EXECUTION TIME:
0.543763
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
0.57
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
1.23
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
1.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:53:26) 
-- CODE:
from numpy import*
x = array(eval(input("insira o v: ")))
i = 0
m = 0
v = float(x)
while(i<size(v)):
	m = m +(((v[i])**(1/3))/v[i])**3
	i = i + 1
	
print(round(m,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:59:46) 
-- CODE:
from numpy import*
x = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(v)):
	m = m +(((int(v[i]))**(1/3))/int(v[i])**3
	i = i + 1
	
print(round(m,2))



-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:00:30) 
-- CODE:
from numpy import*
x = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(v)):
	m = m +(((int(v[i]))**(1/3))/int(v[i])**3
	i = i + 1
	
print(round(m,2))



-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:01:05) 
-- CODE:
from numpy import*
x = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(v)):
	m = m +(((int(v[i]))**(1/3))/int(v[i]))**3
	i = i + 1
	
print(round(m,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 17:01:29) 
-- CODE:
from numpy import*
x = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(x)):
	m = m +(((int(v[i]))**(1/3))/int(v[i]))**3
	i = i + 1
	
print(round(m,2))



-- EXECUTION TIME:
0.468447
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1788/3139/main.py", line 6, in <module>
    m = m +(((int(v[i]))**(1/3))/int(v[i]))**3
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:01:30) 
-- CODE:
from numpy import*
x = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(x)):
	m = m +(((int(v[i]))**(1/3))/int(v[i]))**3
	i = i + 1
	
print(round(m,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:01:57) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(v)):
	m = m +(((int(v[i]))**(1/3))/int(v[i]))**3
	i = i + 1
	
print(round(m,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:03:15) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(v)):
	m = m +(((int(v[i]))**(1/3))/i+1)**3
	i = i + 1
	
print(round(m,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 17:19:04) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(v)):
	m = m +(((int(v[i]))**(1/3))/(i+1))**3
	i = i + 1
	
print(round(m,2))



-- EXECUTION TIME:
0.431681
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
1.51
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
1.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
1.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:19:31) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(v)):
	m = m +(((int(v[i]))**(1/3))/(i+1))**3
	i = i + 1
	
print(round(m,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 17:22:10) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(v)):
	m = m +(((int(v[i]))**(1/3))/(i+1))**3
	i = i + 1
	
print(round(m,2))



-- EXECUTION TIME:
0.506404
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
1.51
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
1.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
1.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:22:33) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(v)):
	m = m +(((float(v[i]))**(1/3))/(i+1))**3
	i = i + 1
	
print(round(m,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:23:11) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(v)):
	m = m +(((float(v[i]))**(1/3))/(i+1))**3
	i = i + 1
	
print(round(m,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 17:24:28) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(v)):
	m = m +(((float(v[i]))**(1/3))/(i+1))**(3)
	i = i + 1
	
print(round(m,2))



-- EXECUTION TIME:
0.603687
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
2.59
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
1.64
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
1.58
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:33:48) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(v)):
	m = m +((float(v[i]))**(1/3))
	i = i + 1
x = (m/size(v))**3
print(round(x,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 17:34:07) 
-- CODE:
from numpy import*
v = array(eval(input("insira o v: ")))
i = 0
m = 0
while(i<size(v)):
	m = m +((float(v[i]))**(1/3))
	i = i + 1
x = (m/size(v))**3
print(round(x,2))



-- EXECUTION TIME:
0.377292
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
